--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
         mkdir -p $HOME/.local
         cd private_comments/src
         sh install_chicken_eggs.sh
-        sh build.sdh
+        sh build.sh
         cp -f pc private_comments $HOME/.local
 
     - name: test
